--- a/question_Guide/views/index.ejs
+++ b/question_Guide/views/index.ejs
@@ -1,12 +1,26 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Question Guide</title>
-</head>
+<%- include ('./partials/header.ejs') %>
+
 <body>
-    <h1>hello from Ejs and Node</h1>
+<%- include ('./partials/navbar.ejs') %>
+    <div class="container">
+        <hr>
+            <h1>Perguntas</h1>
+        <hr>
+        <a href="/perguntar" class=" btn btn-primary">Perguntar</a>
+        <hr>
+        <% perguntas.forEach(pergunta => { %>
+
+            <br><div class="card">
+                <div class="card-body">
+                    <p> <%= pergunta.titulo %></p>
+                    <!-- <p> <%= pergunta.descricao %></p> -->
+                </div>
+                <div class="card-footer">
+                    <a href="/pergunta/<%=pergunta.id%>" class=" btn btn-primary">Responder</a>
+                </div>
+            </div>
+
+        <% }) %>
+    </div>
 </body>
-</html>
+<%- include ('./partials/footer.ejs') %>
