--- a/GuiaPress/views/index.ejs
+++ b/GuiaPress/views/index.ejs
@@ -1,8 +1,30 @@
 <%- include ('./partials/header.ejs') %>
+<%- include ('./partials/homeNavbar.ejs') %>
 <body>
-<%- include ('./partials/navbar.ejs') %>
 
-    <button class="btn btn-danger">hello</button>
+   <div class="container">
+       <hr>
+    <div class="jumbotron">
+        <h1 class="display-4">Hello, world!</h1>
+        <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+        <hr class="my-4">
+        <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+        <a class="btn btn-primary btn-lg" href="#" role="button">Lr mais</a>
+      </div>
+
+       <hr>
+    <% articles.forEach(article => { %> <br>
+        <div class="card">
+            <div class="card-header">
+                <h2><%=article.title%></h2>
+                <div class="card-body">
+                    <a href="/<%=article.slug%>" class="btn btn-warning"> Ler Artigo</a>
+                </div>
+            </div>
+        </div> <br>
+            
+    <%})%>
+   </div>
 </body>
 
 <%- include ('./partials/footer.ejs') %>
