--- a/GuiaPress/views/index.ejs
+++ b/GuiaPress/views/index.ejs
@@ -25,6 +25,14 @@
             
     <%})%>
    </div>
+
+   <div class="row">
+       <div class="col col-12">
+           <a href="/articles/page/2" style="float:right;">Next >>>></a>
+
+       </div>
+   </div>
+   <hr>
 </body>
 
 <%- include ('./partials/footer.ejs') %>
