--- a/GuiaPress/views/partials/navbar.ejs
+++ b/GuiaPress/views/partials/navbar.ejs
@@ -11,4 +11,10 @@
             <a href="/admin/articles" class="nav-link">Artigos</a>
         </li>
     </ul>
+
+    <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+            <a href="/logout" class="nav-link">Logout</a>
+        </li>
+    </ul>
 </nav> 
